@@ -1,1 +1,1 @@
-XBMC add-on for put.io
+Put.io Kodi add-on.
