@@ -2,7 +2,7 @@
 
 <addon id="plugin.video.putio"
     name="put.io"
-    version="2.0.0"
+    version="2.1.0"
     provider-name="Put.io Developers">
     <requires>
         <import addon="xbmc.python" version="2.19.0" />
