@@ -26,21 +26,21 @@ import xbmc
 import xbmcgui
 import xbmcplugin
 
-from resources.lib.helper import __lang__
-from resources.lib.helper import __settings__
+from resources.lib.helper import I18N
+from resources.lib.helper import SETTINGS
 from resources.lib.helper import PutioApiHandler
 from resources.lib.helper import PutioAuthFailureException
 
-__url__ = sys.argv[0]  # base URL ('plugin://plugin.video.putio/')
-__handle__ = int(sys.argv[1])  # process handle, as a numeric string
-__args__ = urlparse.parse_qs(sys.argv[2].lstrip('?'))  # query string, ('?action=list&item=3')
+PLUGIN_URL = sys.argv[0]  # base URL ('plugin://plugin.video.putio/')
+PLUGIN_HANDLE = int(sys.argv[1])  # process handle, as a numeric string
+PLUGIN_ARGS = urlparse.parse_qs(sys.argv[2].lstrip('?'))  # query string, ('?action=list&item=3')
 
 PUTIO_KODI_ENDPOINT = 'https://put.io/xbmc'
-RESOURCE_PATH = os.path.join(__settings__.getAddonInfo('path'), 'resources', 'media')
+RESOURCE_PATH = os.path.join(SETTINGS.getAddonInfo('path'), 'resources', 'media')
 
 
 def build_url(action, item):
-    return '{0}?action={1}&item={2}'.format(__url__, action, item)
+    return '{0}?action={1}&item={2}'.format(PLUGIN_URL, action, item)
 
 
 def get_resource_path(filename):
@@ -60,34 +60,50 @@ def populate_dir(files):
                               iconImage=thumbnail,
                               thumbnailImage=thumbnail)
 
-        # url when a delete action is triggered
-        delete_ctx_url = build_url(action='delete', item=item.id)
+        # http://kodi.wiki/view/InfoLabels
+        type_ = 'video' if item.is_video or item.is_folder else 'music'
+        info_labels={
+            'date': item.created_at.strftime('%d.%m.%Y'),
+            'size': item.size,
+            'title': item.name,
+        }
+        if type_ == 'video':
+            info_labels['mediatype'] = type_
+
+        li.setInfo(type=type_, infoLabels=info_labels)
+
+        # If known prehand, this can (but does not have to) avoid HEAD requests being sent to HTTP servers to figure out
+        # file type.
+        # http://mirrors.kodi.tv/docs/python-docs/16.x-jarvis/xbmcgui.html#ListItem-setMimeType
+        li.setMimeType(mimetype=item.content_type)
 
         if item.is_folder:
             url = build_url(action='list', item=item.id)
         else:  # video or audio, no other types are available here
             url = build_url(action='play', item=item.id)
-
             # resumetime and totaltime are needed for Kodi to decide the file as watched or not.
             # FIXME: get total-time of the file and set to 'totaltime'
-            li.setProperty(key='resumetime', value=str(item.start_from))
+            if hasattr(item, 'start_from'):
+                li.setProperty(key='resumetime', value=str(item.start_from))
             li.setProperty(key='totaltime', value=str(20 * 60))
 
-            # http://kodi.wiki/view/InfoLabels
-            type_ = 'video' if item.is_video else 'music'
-            li.setInfo(type=type_, infoLabels={'size': item.size, 'title': item.name})
+        context_menu_items = [(I18N(32040), 'Container.Refresh')]
+        if not item.is_shared:
+            # url when a delete action is triggered
+            delete_ctx_url = build_url(action='delete', item=item.id)
+            context_menu_items.append(
+                (I18N(32042), 'XBMC.RunPlugin(%s)' % delete_ctx_url))  # delete context
 
-        li.addContextMenuItems([
-            (__lang__(32040), 'Container.Refresh'),  # refresh
-            (__lang__(32042), 'XBMC.RunPlugin(%s)' % delete_ctx_url),  # delete
-        ])
+        li.addContextMenuItems(context_menu_items)
         list_items.append((url, li, item.is_folder))
 
-    xbmcplugin.addDirectoryItems(handle=__handle__, items=list_items, totalItems=len(list_items))
-    xbmcplugin.setContent(handle=__handle__, content='files')
-    xbmcplugin.addSortMethod(handle=__handle__, sortMethod=xbmcplugin.SORT_METHOD_LABEL_IGNORE_THE)
-    xbmcplugin.addSortMethod(handle=__handle__, sortMethod=xbmcplugin.SORT_METHOD_SIZE)
-    xbmcplugin.endOfDirectory(handle=__handle__)
+    xbmcplugin.addDirectoryItems(handle=PLUGIN_HANDLE, items=list_items, totalItems=len(list_items))
+    xbmcplugin.setContent(handle=PLUGIN_HANDLE, content='files')
+    xbmcplugin.addSortMethod(handle=PLUGIN_HANDLE,
+                             sortMethod=xbmcplugin.SORT_METHOD_LABEL_IGNORE_THE)
+    xbmcplugin.addSortMethod(handle=PLUGIN_HANDLE, sortMethod=xbmcplugin.SORT_METHOD_DATE)
+    xbmcplugin.addSortMethod(handle=PLUGIN_HANDLE, sortMethod=xbmcplugin.SORT_METHOD_SIZE)
+    xbmcplugin.endOfDirectory(handle=PLUGIN_HANDLE)
 
 
 def play(item):
@@ -104,8 +120,14 @@ def play(item):
                    'title': item.name,
                    'mediatype': 'video',
                })
+    # If known prehand, this can (but does not have to) avoid HEAD requests being sent to HTTP servers to figure out
+    # file type.
+    # http://mirrors.kodi.tv/docs/python-docs/16.x-jarvis/xbmcgui.html#ListItem-setMimeType
+    li.setMimeType(mimetype=item.content_type)
+
     # resume where it was left off
-    li.setProperty(key='startoffset', value=str(item.start_from))
+    if hasattr(item, 'start_from'):
+        li.setProperty(key='startoffset', value=str(item.start_from))
     li.setProperty(key='IsPlayable', value='true')
 
     li.setSubtitles([item.subtitles()])
@@ -118,7 +140,7 @@ def delete(item):
     if item.id == 0:
         return
 
-    response = xbmcgui.Dialog().yesno(heading=__lang__(32060), line1=__lang__(32061))
+    response = xbmcgui.Dialog().yesno(heading=I18N(32060), line1=I18N(32061))
 
     # yes=1, no=0
     if response == 0:
@@ -131,19 +153,24 @@ def delete(item):
 def main():
     """Dispatches the commands."""
 
-    handler = PutioApiHandler(__settings__.getSetting('oauth2_token'))
-    item_id = __args__.get('item')
-    if not item_id:
+    handler = PutioApiHandler(SETTINGS.getSetting('oauth2_token'))
+    item_id = PLUGIN_ARGS.get('item')
+    if not item_id:  # Entrypoint.
+        # if the user has an account but no product,
+        # she could walk the files but couldn't play them. Inform.
+        if not handler.is_account_active():
+            xbmcgui.Dialog().ok(heading=I18N(32062), line1=I18N(32063))
+
         populate_dir(handler.list(parent=0))
         return
 
-    item_id = item_id[0]
+    item_id = int(item_id[0])
     item = handler.get(id_=item_id)
     if not item.content_type:
         return
 
     # Dispatch commands
-    action = __args__.get('action')
+    action = PLUGIN_ARGS.get('action')
     if not action:
         return
 
@@ -170,17 +197,15 @@ if __name__ == '__main__':
         # FIXME: json parsing might fail
         uniqueid = r.json()['id']
 
-        xbmcgui.Dialog().ok(heading=__lang__(32022),
-                            line1=__lang__(32023) % uniqueid,
-                            line2=__lang__(32024))
+        xbmcgui.Dialog().ok(heading=I18N(32022), line1=I18N(32023) % uniqueid, line2=I18N(32024))
 
         try:
             # request oauth2 token in exchange to this unique id.
             r = requests.get(PUTIO_KODI_ENDPOINT + '/k/%s' % uniqueid)
             oauth2_token = r.json()['oauthtoken']
             if oauth2_token:
-                __settings__.setSetting('oauth2_token', str(oauth2_token))
+                SETTINGS.setSetting('oauth2_token', str(oauth2_token))
                 main()
         except Exception as e:
             xbmc.log(msg='Error while fetching oauth2 token. error: %s' % e, level=xbmc.LOGERROR)
-            xbmcgui.Dialog().ok(header=__lang__(32020), header1=str(e))
+            xbmcgui.Dialog().ok(header=I18N(32020), header1=str(e))
