@@ -1,7 +1,7 @@
 import xbmc
 
 from resources.lib.putio import Client
-from resources.lib.helper import __settings__
+from resources.lib.helper import SETTINGS
 
 POLL_INTERVAL = 2
 PUTIO_API_ENDPOINT = 'https://api.put.io/v2'
@@ -46,7 +46,7 @@ if __name__ == '__main__':
         if (video_duration - video_is_at) < POLL_INTERVAL:
             video_is_at = video_duration
 
-        oauth2_token = __settings__.getSetting('oauth2_token')
+        oauth2_token = SETTINGS.getSetting('oauth2_token')
         if not oauth2_token:
             xbmc.log(msg='[putio.service] Missing OAuth2 Token', level=xbmc.LOGERROR)
             continue
@@ -57,6 +57,9 @@ if __name__ == '__main__':
 
         # time to send a request
         handler = Client(access_token=oauth2_token, use_retry=True)
-        handler.request('/files/%s/start-from/set' % item_id,
-                        method='POST',
-                        data={'time': video_is_at})
+        try:
+            handler.request('/files/%s/start-from/set' % item_id,
+                            method='POST',
+                            data={'time': video_is_at})
+        except Exception as e:
+            xbmc.log(msg='[putio.service] Exception while syncing video position with the API. %s' % e)
