@@ -1,3 +1,10 @@
+2016-05-02 Ibrahim Gungor <ibrahim@put.io>
+    * Sort files by date
+    * Inform user if payment is expired
+    * Don't show delete context for shared files
+    * Fix errors dialogs popping up occasionally while watching a video
+    * Fix AttributeError where an audio file has no 'start_from' attribute
+
 2016-04-21 Ibrahim Gungor <ibrahim@put.io>
     * Video resume support
     * Sort files by name
@@ -5,7 +12,6 @@
     * Delete file/directory support
     * Proper subtitle support
     * Refresh a directory for new changes
-    * Go parent directory on context menu
     * Add Turkish locale
 
 2014-03-04  Burak Sezer  <burak@pilli.com>
